envoy-adapter/k8s/greeter.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeterservice
  namespace: myservices
spec:
  selector:
    matchLabels:
      app: greeterservice
      version: v1
  template:
    metadata:
      labels:
        app: greeterservice
        version: v1
        managed-by: apigee
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: eu.gcr.io/geirs-purdy-project/greeter:1
        ports:
        - containerPort: 50051
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: greeterservice
  namespace: myservices
  labels:
    app: greeterservice
spec:
  ports:
  - port: 3000
    targetPort: 50051
    name: grpc
    protocol: TCP
  selector:
    app: greeterservice
